@@ -1,3 +1,11 @@
+2004-06-14  Laurent Sansonetti  <lrz@gnome.org>
+
+	* lib/alexandria/book.rb,
+	  data/alexandria/glade/new_book_dialog.glade,
+	  lib/alexandria/ui/new_book_dialog.rb:
+
+	Modified to allow title searches (as well as ISBN searches). 
+
 2004-06-14  Pascal Terjan  <pterjan@linuxfr.org>
 
 	* lib/alexandria.rb, lib/alexandria/book.rb,
